--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -41,7 +41,7 @@
   "company.assignments.filter_2": "الأرشيف",
   "component.loading": "جار التحميل...",
   "confirmation.applied.for.job.button": "جِد عدة وظائف",
-  "confirmation.applied.for.job.description": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 18 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
+  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Applications. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "لقد تقدمت لهذه الوظيفة.",
   "confirmation.contact.button": "العودة الى الاتصال",
   "confirmation.contact.description": "سوف نرد بأقرب وقت ممكن",
@@ -116,7 +116,7 @@
   "home.jobs.slider.user.jobs.job.applied.label": "مقدم عليه",
   "home.jobs.slider.user.jobs.job.ended.label": "انتهى",
   "home.jobs.slider.user.jobs.job.offered.label": "معروض",
-  "home.jobs.slider.user.jobs.title": "وظائفي",
+  "home.jobs.slider.user.jobs.title": "My Applications",
   "home.jobs.slider.user.jobs.will.perform.job.label": "تمّ تعيينه",
   "home.partners.description": "Just Arrived عبارة عن مبادرة مجانية مشتركة تم ابتكارها للمساعدة في إلحاق المهاجرين الذين وصلوا مؤخرًا بسوق العمل السويدي. وهذه المبادرة تمتلكها إحدى المؤسسات ويتولى إدارتها اتحاد شركات.",
   "home.partners.title": "شركاؤنا",
@@ -241,12 +241,13 @@
   "job.actions.header.performed": "تم أداء الوظيفة",
   "job.actions.header.register": "إنشاء حساب",
   "job.actions.section.applied": "قدّمت على الوظيفة",
-  "job.actions.section.apply": "قدّم على الوظيفة",
+  "job.actions.section.apply": "التسجيل",
   "job.actions.section.confirm": "قبول عرض",
   "job.actions.section.hired": "تمّ تعيينه",
   "job.actions.section.login": "تسجيل الدخول للتقدم للوظيفة",
   "job.actions.section.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.section.performed": "تم أداء الوظيفة",
+  "job.actions.section.read.more": "Read more about",
   "job.actions.section.register": "إنشاء حساب",
   "job.additional.user.info.modal.button": "أكمل",
   "job.additional.user.info.modal.title": "لزيادة فرصتك للحصول على هذه الوظيفة يرجى النظر في توفير المعلومات التالية",
@@ -258,14 +259,25 @@
   "job.card.temporary": "Temporary",
   "job.card.until.further.notice": "Indefinite duration",
   "job.comments.section.title": "تعليق",
+  "job.company.short.description.section.title": "Short about {{company}}",
   "job.description.section.header": "وصف",
+  "job.description.section.title": "About the job",
+  "job.important.information.section.hours": "{{hours}} الساعات",
+  "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
+  "job.important.information.section.title": "Important information",
+  "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "معلومات",
   "job.location.section.header": "الموقع",
+  "job.recruiter.section.title": "Responsible recruiter",
   "job.scope.section.grossSalary": "{{grossSalary}} الراتب الإجمالي (قبل الضريبة)",
   "job.scope.section.header": "المجال",
   "job.scope.section.hours": "{{hours}} الساعات",
   "job.scope.section.netSalary": "{{netSalary}} صافي الراتب (بعد الضريبة)",
   "job.scope.section.until.further.notice": "حتى اشعار آخر",
+  "job.short.description.section.title": "Short about the job",
+  "job.tasks.section.title": "Tasks",
+  "job.applicant.section.title": "You are",
+  "job.requirements.section.title": "عندك",
   "jobs.title": "كل الوظائف ({{nbrOfJobs}})",
   "language.proficiency.basic": "معرفة أساسية ",
   "language.proficiency.beginner": "مبتدئ",
@@ -277,6 +289,9 @@
   "login.form.submit.button": "تسجيل الدخول",
   "login.modal.button": "تسجيل الدخول",
   "login.modal.title": "تسجيل الدخول",
+  "login.or.register.modal.login": "تسجيل الدخول",
+  "login.or.register.modal.register": "إنشاء حساب",
+  "login.or.register.modal.title": "Before you can do that please login or create a new account",
   "login.title": "تسجيل الدخول",
   "lost.connection.description": "عذرا، يبدو أنك فقدت الاتصال بالخادم. ربما اتصال الإنترنت الخاص بك مقطوع أو الخادم غير متصل.",
   "lost.connection.title": "فقد الإتصال",
@@ -298,13 +313,15 @@
   "menu.main.home": "منزل",
   "menu.main.login": "تسجيل الدخول",
   "menu.main.logout": "تسجيل الخروج",
-  "menu.main.my_assignment": "وظائفي",
+  "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.support.chat": "تحدث مع Just Arrived",
   "meta.404.description": "The page or resource you are looking for can not be found",
   "meta.404.title": "Not found",
+  "meta.applications.description": "Here you can see your job applications and their current status",
+  "meta.applications.title": "Your applications",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
   "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "نستخدم كعكات لأسباب تقنية ولتسهيل استعمال خدماتنا ولإعطاءك كمستخدم معلومات جديرة عند زيارتك لموقعنا تستخدم الكعكات أيضا لقياس عدد زيارات موقعنا ولجمع الإحصائيات وتحسين خدماتنا الاستعانة بخدماتنا يعني الموافقة منك ان نستعمل الكعكات، هذا إذا لم يتم تعطيلها عن طريق تغيير الإعدادات للكعكات في متصفح الشبكة لديك",
@@ -360,7 +377,8 @@
   "reset.password.form.login.link": "تسجيل الدخول",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
-  "share.section.title": "Share",
+  "share.section.title": "Share on social media",
+  "share.with.modal.section.title": "Share",
   "sign.for.job.form.submit.button": "تسجيل دخول",
   "sign.for.job.form.terms.section": "شروظ التوظيف",
   "sign.for.job.modal.button": "تسجيل دخول",
@@ -423,7 +441,7 @@
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
   "users.filter.search.label": "البحث عن المستخدمين",
   "users.filter.search.placeholder": "البحث عن المستخدمين ",
-  "validations.email_pattern": "يجب أن يكون عنوان بريد الكتروني صحيح",
+  "validations.email": "must be a valid email address",
   "validations.maxlength": "طويل جدا (الحد الأقصى {{maxLength}} من الأحرف)",
   "validations.minlength": "قصير جدا (الحد الأدنى {{minLength}} من الأحرف)",
   "validations.pattern": "لا يتوافق مع النمط المطلوب",
