--- a/src/assets/i18n/fa_AF.json
+++ b/src/assets/i18n/fa_AF.json
@@ -41,7 +41,7 @@
   "company.assignments.filter_2": "آرشیو",
   "component.loading": "Loading..",
   "confirmation.applied.for.job.button": "ماموریت‌های کاری دیگری پیدا کنید",
-  "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragstagaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
+  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Applications. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "You have applied for the job",
   "confirmation.contact.button": "بازگشت به تماس",
   "confirmation.contact.description": "We will reply as soon as we can.",
@@ -116,7 +116,7 @@
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
-  "home.jobs.slider.user.jobs.title": "ماموریت‌های کاری من",
+  "home.jobs.slider.user.jobs.title": "My Applications",
   "home.jobs.slider.user.jobs.will.perform.job.label": "استخدام شده",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "همکاران کاری ما",
@@ -241,12 +241,13 @@
   "job.actions.header.performed": "Job performed",
   "job.actions.header.register": "Create an account",
   "job.actions.section.applied": "شما برای این ماموریت کاری درخواست ارسال نموده‌اید",
-  "job.actions.section.apply": "برای این ماموریت کاری درخواست نمایید",
+  "job.actions.section.apply": "Apply",
   "job.actions.section.confirm": "Accept offer",
   "job.actions.section.hired": "استخدام شده",
   "job.actions.section.login": "Log in to apply",
   "job.actions.section.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
   "job.actions.section.performed": "Job performed",
+  "job.actions.section.read.more": "Read more about",
   "job.actions.section.register": "Create an account",
   "job.additional.user.info.modal.button": "ادامه دهید",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
@@ -258,14 +259,25 @@
   "job.card.temporary": "Temporary",
   "job.card.until.further.notice": "Indefinite duration",
   "job.comments.section.title": "نظرات",
+  "job.company.short.description.section.title": "Short about {{company}}",
   "job.description.section.header": "شرح",
+  "job.description.section.title": "About the job",
+  "job.important.information.section.hours": "{{hours}} hours",
+  "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
+  "job.important.information.section.title": "Important information",
+  "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "Information",
   "job.location.section.header": "Location",
+  "job.recruiter.section.title": "Responsible recruiter",
   "job.scope.section.grossSalary": "{{grossSalary}} gross salary (before taxes)",
   "job.scope.section.header": "Scope",
   "job.scope.section.hours": "{{hours}} hours",
   "job.scope.section.netSalary": "{{netSalary}} net salary (after taxes)",
   "job.scope.section.until.further.notice": "Until further notice",
+  "job.short.description.section.title": "Short about the job",
+  "job.tasks.section.title": "Tasks",
+  "job.applicant.section.title": "You are",
+  "job.requirements.section.title": "Du har",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
@@ -277,6 +289,9 @@
   "login.form.submit.button": "وارد سیستم شدن",
   "login.modal.button": "وارد سیستم شدن",
   "login.modal.title": "وارد سیستم شدن",
+  "login.or.register.modal.login": "وارد سیستم شدن",
+  "login.or.register.modal.register": "یک حساب کاربری ایجاد کنید",
+  "login.or.register.modal.title": "Before you can do that please login or create a new account",
   "login.title": "وارد سیستم شدن",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
@@ -298,13 +313,15 @@
   "menu.main.home": "Hem",
   "menu.main.login": "وارد سیستم شدن",
   "menu.main.logout": "خارج شدن از سیستم",
-  "menu.main.my_assignment": "ماموریت‌های کاری من",
+  "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "پروفایل",
   "menu.main.register": "یک حساب کاربری ایجاد کنید",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
   "meta.404.description": "The page or resource you are looking for can not be found",
   "meta.404.title": "Not found",
+  "meta.applications.description": "Here you can see your job applications and their current status",
+  "meta.applications.title": "Your applications",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
   "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
@@ -360,7 +377,8 @@
   "reset.password.form.login.link": "وارد سیستم شدن",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
-  "share.section.title": "Share",
+  "share.section.title": "Share on social media",
+  "share.with.modal.section.title": "Share",
   "sign.for.job.form.submit.button": "Sign",
   "sign.for.job.form.terms.section": "Terms of employment",
   "sign.for.job.modal.button": "Sign",
@@ -423,7 +441,7 @@
   "user.update.form.submit.button": "Save changes",
   "users.filter.search.label": "Search users",
   "users.filter.search.placeholder": "Search users",
-  "validations.email_pattern": "must look like an email address",
+  "validations.email": "must be a valid email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
   "validations.pattern": "does not conform to the required pattern",
