--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -41,7 +41,7 @@
   "company.assignments.filter_2": "Arkiv",
   "component.loading": "Laddar..",
   "confirmation.applied.for.job.button": "Hitta fler jobb",
-  "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
+  "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Ansökningar. Där samlas även all kommunikation som sker med uppdragsgivaren.",
   "confirmation.applied.for.job.title": "Du har ansökt om jobbet",
   "confirmation.contact.button": "Tillbaka till kontakt",
   "confirmation.contact.description": "Vi kommer svara så snart vi kan",
@@ -116,7 +116,7 @@
   "home.jobs.slider.user.jobs.job.applied.label": "Ansökt",
   "home.jobs.slider.user.jobs.job.ended.label": "Genomfört",
   "home.jobs.slider.user.jobs.job.offered.label": "Erbjuden",
-  "home.jobs.slider.user.jobs.title": "Mina jobb",
+  "home.jobs.slider.user.jobs.title": "Mina Ansökningar",
   "home.jobs.slider.user.jobs.will.perform.job.label": "Anlitad",
   "home.partners.description": "Just Arrived är ett gemensamt pro bono-initiativ för att hjälpa nyanlända in på den svenska arbetsmarknaden. Vi ägs av en stiftelse och drivs av en sammanslutning av företag.",
   "home.partners.title": "Våra partners",
@@ -241,12 +241,13 @@
   "job.actions.header.performed": "Jobb utfört",
   "job.actions.header.register": "Skapa ett konto",
   "job.actions.section.applied": "Du har sökt jobbet",
-  "job.actions.section.apply": "Sök jobbet",
+  "job.actions.section.apply": "Ansök",
   "job.actions.section.confirm": "Tacka ja",
   "job.actions.section.hired": "Anlitad",
   "job.actions.section.login": "Logga in för att söka",
   "job.actions.section.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
   "job.actions.section.performed": "Jobb utfört",
+  "job.actions.section.read.more": "Läs mer om",
   "job.actions.section.register": "Skapa ett konto",
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
@@ -258,14 +259,25 @@
   "job.card.temporary": "Tillfälligt",
   "job.card.until.further.notice": "Tillsvidare",
   "job.comments.section.title": "Kommentarer",
+  "job.company.short.description.section.title": "Kort om {{company}}",
   "job.description.section.header": "Beskrivning",
+  "job.description.section.title": "Om jobbet",
+  "job.important.information.section.hours": "{{hours}} timmar",
+  "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} bruttolön",
+  "job.important.information.section.title": "Viktig information",
+  "job.important.information.section.total.salary": "{{totalGrossSalary}} total lön ({{totalNetSalary}} efter skatt)",
   "job.information.section.header": "Information",
   "job.location.section.header": "Plats",
+  "job.recruiter.section.title": "Ansvarig rekryterare",
   "job.scope.section.grossSalary": "{{grossSalary}} bruttolön (före skatt)",
   "job.scope.section.header": "Omfattning",
   "job.scope.section.hours": "{{hours}} timmar",
   "job.scope.section.netSalary": "{{netSalary}} nettolön (efter skatt)",
   "job.scope.section.until.further.notice": "Tillsvidare",
+  "job.short.description.section.title": "Kort om jobbet",
+  "job.tasks.section.title": "Uppgifter",
+  "job.applicant.section.title": "Du är",
+  "job.requirements.section.title": "Du har",
   "jobs.title": "Alla jobb ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
@@ -277,6 +289,9 @@
   "login.form.submit.button": "Logga in",
   "login.modal.button": "Logga in",
   "login.modal.title": "Logga in",
+  "login.or.register.modal.login": "Logga in",
+  "login.or.register.modal.register": "Skapa konto",
+  "login.or.register.modal.title": "Innan du kan göra det där så behöver du logga in eller skapa ett nytt konto",
   "login.title": "Logga in",
   "lost.connection.description": "\nTyvärr, men det verkar som att du förlorat anslutningen till servern. Det kan vara så att din internetuppkoppling är nere eller att servern är offline",
   "lost.connection.title": "Anslutning förlorad",
@@ -298,13 +313,15 @@
   "menu.main.home": "Hem",
   "menu.main.login": "Logga in",
   "menu.main.logout": "Logga ut",
-  "menu.main.my_assignment": "Mina jobb",
+  "menu.main.my_assignment": "Mina Ansökningar",
   "menu.main.profile": "Profil",
   "menu.main.register": "Skapa konto",
   "menu.main.staffing_time_report": "Tidsrapportera",
   "menu.main.support.chat": "Chatta med Just Arrived",
   "meta.404.description": "Sidan eller resursen du söker kunde inte hittas",
   "meta.404.title": "Hittades inte",
+  "meta.applications.description": "Här kan du se dina jobbansökningar och deras nuvarande status",
+  "meta.applications.title": "Dina ansökningar",
   "meta.contact.description": "Om du har några frågor eller feedback så får du gärna kontakta oss och så kommer vi höra av oss till dig så snart som möjligt.",
   "meta.contact.title": "Kontakta oss",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
@@ -360,7 +377,8 @@
   "reset.password.form.login.link": "Logga in",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
-  "share.section.title": "Dela",
+  "share.section.title": "Dela på social media",
+  "share.with.modal.section.title": "Dela",
   "sign.for.job.form.submit.button": "Signera",
   "sign.for.job.form.terms.section": "Anställningsvillkor",
   "sign.for.job.modal.button": "Signera",
@@ -423,7 +441,7 @@
   "user.update.form.submit.button": "Spara ändringar",
   "users.filter.search.label": "Sök användare",
   "users.filter.search.placeholder": "Sök användare",
-  "validations.email_pattern": "måste se ut som en epostadress",
+  "validations.email": "måste vara en giltig email",
   "validations.maxlength": "är för lång (max {{maxLength}} tecken)",
   "validations.minlength": "är för kort (minst {{minLength}} tecken)",
   "validations.pattern": "följer inte det format som krävs",
