--- a/src/assets/i18n/ti.json
+++ b/src/assets/i18n/ti.json
@@ -354,6 +354,8 @@
   "meta.support.chat.title": "Chat with us",
   "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "meta.user.profile.title": "Your profile",
+  "missing.payment.information.modal.button": "Bidomîne",
+  "missing.payment.information.modal.title": "In order to get payed you need to provide the following missing information",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
