New design completed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,9 +1,4 @@
 {
-  "job.important.information.section.last.application.date.title": "Last day of application",
-  "job.important.information.section.employer.title": "Employer",
-  "job.important.information.section.period.title": "Period",
-  "job.important.information.section.address.title": "Address",
-  "job.important.information.section.salary.title": "Salary",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -21,6 +16,7 @@
   "assignment.status.performed": "Job performed",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
+  "back.to.jobs.section.link": "Find more jobs",
   "basic.chat.messages.empty": "No messages yet",
   "basic.comments.empty": "No comments yet",
   "button.form.submit.fail": "There are some errors, please review them above.",
@@ -256,6 +252,7 @@
   "job.actions.section.register": "Create an account",
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
+  "job.applicant.section.title": "You are",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} hours",
@@ -267,13 +264,19 @@
   "job.company.short.description.section.title": "Short about {{company}}",
   "job.description.section.header": "Description",
   "job.description.section.title": "About the job",
+  "job.important.information.section.address.title": "Address",
+  "job.important.information.section.employer.title": "Employer",
   "job.important.information.section.hours": "{{hours}} hours",
+  "job.important.information.section.last.application.date.title": "Last day of application",
+  "job.important.information.section.period.title": "Period",
   "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
+  "job.important.information.section.salary.title": "Salary",
   "job.important.information.section.title": "Important information",
   "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "Information",
   "job.location.section.header": "Location",
   "job.recruiter.section.title": "Responsible recruiter",
+  "job.requirements.section.title": "You have",
   "job.scope.section.grossSalary": "{{grossSalary}} gross salary (before taxes)",
   "job.scope.section.header": "Scope",
   "job.scope.section.hours": "{{hours}} hours",
@@ -281,8 +284,6 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
-  "job.applicant.section.title": "You are",
-  "job.requirements.section.title": "You have",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
