Added a closed for applications notification for jobs that are closed for applications and removed the apply button for those.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -243,6 +243,7 @@
   "job.actions.header.register": "Create an account",
   "job.actions.section.applied": "You have applied for this job",
   "job.actions.section.apply": "Apply",
+  "job.actions.section.closed.for.applications": "Closed for applications",
   "job.actions.section.confirm": "Accept offer",
   "job.actions.section.hired": "Hired",
   "job.actions.section.login": "Log in to apply",
