Use application_status enum too display right information about applications

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,11 @@
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
+  "application.item.applied": "You have applied for the job",
+  "application.item.hired": "You've been hired",
+  "application.item.offered": "The company wants to hire you",
+  "application.item.rejected": "Someone else got the job",
+  "application.item.withdrawn": "The application was withdrawn",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
@@ -13,9 +18,6 @@
   "assignment.details": "Job details",
   "assignment.hours": "Hours",
   "assignment.rate.gross_salary": "gross salary",
-  "assignment.status.performed": "Job performed",
-  "assignment.status.user_company_hire": "The company wants to hire you",
-  "assignment.status.you_hired": "You've been hired",
   "back.to.jobs.section.link": "Find more jobs",
   "basic.chat.messages.empty": "No messages yet",
   "basic.comments.empty": "No comments yet",
@@ -115,10 +117,11 @@
   "home.jobs.slider.new.jobs.title": "New jobs",
   "home.jobs.slider.show.all.link": "Show all",
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
-  "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
+  "home.jobs.slider.user.jobs.job.rejected.label": "Not hired",
+  "home.jobs.slider.user.jobs.job.withdrawn.label": "Withdrawn",
   "home.jobs.slider.user.jobs.title": "My Applications",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "Hired",
+  "home.jobs.slider.user.jobs.will.perform.label": "Hired",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
   "how.it.works.section.create.accont.button": "Create account",
@@ -251,6 +254,8 @@
   "job.actions.section.performed": "Job performed",
   "job.actions.section.read.more": "Read more about",
   "job.actions.section.register": "Create an account",
+  "job.actions.section.rejected": "Unfortunately, someone else got the job",
+  "job.actions.section.withdrawn": "Your application has been withdrawn",
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
