Pages can make navbar transparent when top scrolled if they want to

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -317,6 +317,7 @@
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
   "menu.language.title": "Select language",
+  "menu.language.image.title": "Language",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
