Add translations to user filters

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,4 @@
 {
-  "job.card.filled": "Job filled",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -71,6 +70,10 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Answers",
   "faq.title": "Questions and answers",
+  "filter.users.input.option.email": "Email",
+  "filter.users.input.option.first.name": "First Name",
+  "filter.users.input.option.id": "Id",
+  "filter.users.input.option.last.name": "Last Name",
   "footer.about.us.section.careers": "Careers",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "About Just Arrived",
@@ -261,6 +264,7 @@
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
   "job.card.currency.per.hour": "{{currency}}/hour",
+  "job.card.filled": "Job filled",
   "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} hours",
   "job.card.part.time": "Part time",
@@ -315,10 +319,10 @@
   "map.geolocation.error.timeout": "service timeout has been reached",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "Go to job",
+  "menu.language.image.title": "Language",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
   "menu.language.title": "Select language",
-  "menu.language.image.title": "Language",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
@@ -404,6 +408,12 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
+  "sort.users.input.option.first.name.reverse": "First Name (Z-A)",
+  "sort.users.input.option.first.name": "First Name (A-Z)",
+  "sort.users.input.option.last.name.reverse": "Last Name (Z-A)",
+  "sort.users.input.option.last.name": "Last Name (A-Z)",
+  "sort.users.input.option.newest": "Newest",
+  "sort.users.input.option.oldest": "Oldest",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
