--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,10 +70,6 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Answers",
   "faq.title": "Questions and answers",
-  "filter.users.input.option.email": "Email",
-  "filter.users.input.option.first.name": "First Name",
-  "filter.users.input.option.id": "Id",
-  "filter.users.input.option.last.name": "Last Name",
   "footer.about.us.section.careers": "Careers",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "About Just Arrived",
@@ -166,7 +162,17 @@
   "input.email.placeholder": "Email",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
+  "input.filter.jobs.label": "Filter on",
+  "input.filter.jobs.option.all": "All jobs",
+  "input.filter.jobs.option.filled": "Filled jobs",
+  "input.filter.jobs.option.open": "Open for applications",
+  "input.filter.jobs.option.unfilled": "Unfilled jobs",
+  "input.filter.jobs.placeholder": "Filter on",
   "input.filter.users.label": "Search by",
+  "input.filter.users.option.email": "Email",
+  "input.filter.users.option.first.name": "First Name",
+  "input.filter.users.option.id": "Id",
+  "input.filter.users.option.last.name": "Last Name",
   "input.filter.users.placeholder": "Search by",
   "input.first.name.label": "First name",
   "input.first.name.placeholder": "First name",
@@ -263,6 +269,7 @@
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
+  "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.filled": "Job filled",
   "job.card.full.time": "Full time",
@@ -295,7 +302,7 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
-  "jobs.title": "All jobs ({{nbrOfJobs}})",
+  "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
   "language.proficiency.expert": "Native speaker",
