Reuse job card for my applications page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,6 +116,11 @@
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "New jobs",
   "home.jobs.slider.show.all.link": "Show all",
+  "job.card.withdrawn": "Withdrawn",
+  "job.card.rejected": "Not hired",
+  "job.card.hired": "Hired",
+  "job.card.hired": "Job offer",
+  "job.card.applied": "Applied",
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.job.rejected.label": "Not hired",
