Use the read more bar in job card for application status

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,11 +116,11 @@
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "New jobs",
   "home.jobs.slider.show.all.link": "Show all",
-  "job.card.withdrawn": "Withdrawn",
-  "job.card.rejected": "Not hired",
-  "job.card.hired": "Hired",
-  "job.card.hired": "Job offer",
-  "job.card.applied": "Applied",
+  "job.card.withdrawn": "Your application has been withdrawn",
+  "job.card.rejected": "Someone else got the job",
+  "job.card.hired": "You have been employed",
+  "job.card.offered": "Job offered to you",
+  "job.card.applied": "You have applied for this job",
   "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.job.rejected.label": "Not hired",
@@ -254,7 +254,7 @@
   "job.actions.header.applied": "You have applied for this job",
   "job.actions.header.apply": "Apply for job",
   "job.actions.header.confirm": "Accept offer",
-  "job.actions.header.hired": "Hired",
+  "job.actions.header.hired": "You have been employed",
   "job.actions.header.login": "Log in to apply",
   "job.actions.header.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
   "job.actions.header.performed": "Job performed",
@@ -263,7 +263,7 @@
   "job.actions.section.apply": "Apply",
   "job.actions.section.closed.for.applications": "Closed for applications",
   "job.actions.section.confirm": "Accept offer",
-  "job.actions.section.hired": "Hired",
+  "job.actions.section.hired": "You have been employed",
   "job.actions.section.login": "Log in to apply",
   "job.actions.section.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
   "job.actions.section.performed": "Job performed",
